--- a/API/package.json
+++ b/API/package.json
@@ -9,7 +9,8 @@
     "express": "^4.18.2",
     "libphonenumber-js": "^1.10.14",
     "node-firebird": "^1.0.0",
+    "node-windows": "^1.0.0-beta.8",    
     "qrcode": "^1.5.1",
-    "whatsapp-web.js": "^1.19.4"
+    "whatsapp-web.js": "^1.22.1"
   }
 }
